# fmi-report-guard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  monitor.yml  sync-digest.yml
src/fmi_report_guard/: __init__.py  checks.py  config.py  daily_summary.py  issues.py  main.py  models.py  openai_review.py  scraper.py  state_store.py  sync_digest.py  title_index.py
state/: seen_reports.json
tests/: test_checks.py  test_daily_summary.py  test_github_digest.py
